# gravivol

./: .dockerignore  .gitignore  Cargo.toml  Dockerfile  Justfile  LICENSE  README.md  index.yaml
.devcontainer/: Dockerfile  devcontainer.json
.github/workflows/: build.yml
charts/gravivol/: Chart.yaml  values.yaml
charts/gravivol/templates/: _helpers.tpl  cert-client.yaml  cert-server.yaml  deployment.yaml  root-ca.yaml  service.yaml  serviceaccount.yaml  webhookConfiguration.yaml
src/: controller.rs  main.rs
tools/: Dockerfile.local  admission-review-request.json  cert-manager.yaml
