[package]
name = "gravivol"
version = "0.1.0"
edition = "2024"

[dependencies]
actix-web = { version = "4", features = ["rustls-0_23"] }
rustls = "0.23"
rustls-pemfile = "2"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
base64 = "0.21"
env_logger = "0.11"
log = "0.4"
tokio = { version = "1", features = ["full"] }
json-patch = "4.1.0"
